# wavelet

./: .dockerignore  .gitignore  .gitmodules  AE.md  Cargo.toml  Dockerfile  HOAS.lean  Loop.lean  Main.lean  README.md  Simple.lean  Wavelet.lean  l0-type-system.html  l0-type-system.md  lake-manifest.json  lakefile.lean  rust-toolchain.toml  test.dfg.json  test.json  test.rs
dfx/: Cargo.toml
dfx/examples/: export_json.rs  sum.json
dfx/examples/output/: copy_array.json  diffusion.json  dmv.json  increment.json  mv_mul.json  nn_fc.json  nn_relu.json  prefix_sum.json  raw.json  sum.json  war.json  waw.json  zero_out.json
dfx/src/: check.rs  env.rs  error.rs  ir.rs  lib.rs  main.rs  parse.rs
dfx/src/ghost/: affine.rs  checker.rs  fracperms.rs  ir.rs  json.rs  lower.rs  mod.rs  pcm.rs  permission.rs  semantics.rs
dfx/src/ghost/checker/: context.rs  expr_checker.rs  mod.rs  permission.rs  pretty_print.rs  program_checker.rs  stmt_checker.rs  tail_checker.rs  tests.rs
dfx/src/logic/: cap.rs  mod.rs  region.rs
dfx/src/logic/semantic/: mod.rs  region_set.rs  solver.rs
dfx/src/logic/syntactic/: cap.rs  mod.rs  phi.rs  region.rs  solver.rs
dfx/tests/: cap_diff.rs  parser_tests.rs  phi_region.rs  phi_solver.rs  solver_le.rs  test_examples.rs  typeck_tests.rs
dfx/tests/test_files/: diffusion.rs  dmv.rs  increment.rs  mv_mul.rs  nn_fc.rs  prefix_sum.rs  raw_no_fence.rs  rec_rows.rs  war_no_fence.rs  waw_no_fence.rs
wavelet/: Cargo.toml  build.rs
wavelet-core/: Cargo.toml  build.rs
wavelet-core/lean/: Main.lean  Wavelet.lean  lakefile.lean
wavelet-core/lean/Wavelet/: Backend.lean  Data.lean  Dataflow.lean  Determinacy.lean  FFI.lean  Semantics.lean  Thm.lean
wavelet-core/lean/Wavelet/Backend/: Handshake.lean
wavelet-core/lean/Wavelet/Compile/: EraseGhost.lean  Fn.lean  MapChans.lean  Prog.lean  Rewrite.lean
wavelet-core/lean/Wavelet/Data/: Basic.lean  IndentWriter.lean
wavelet-core/lean/Wavelet/Dataflow/: AffineChan.lean  AsyncOp.lean  ChanMap.lean  Interpreter.lean  Plot.lean  Proc.lean
wavelet-core/lean/Wavelet/Determinacy/: OpSpec.lean  PCM.lean
wavelet-core/lean/Wavelet/Frontend/: Dataflow.lean  RipTide.lean  Seq.lean
wavelet-core/lean/Wavelet/Semantics/: Defs.lean  Link.lean  Lts.lean  OpInterp.lean
wavelet-core/lean/Wavelet/Seq/: AffineVar.lean  Fn.lean  Prog.lean  VarMap.lean
wavelet-core/lean/Wavelet/Thm/: Compile.lean  Data.lean  Dataflow.lean  Determinacy.lean  HighLevel.lean  Semantics.lean  Seq.lean
wavelet-core/lean/Wavelet/Thm/Compile/: Fn.lean  (+3 more)
wavelet-core/src/: ffi.rs  lib.rs  main.rs  riptide.rs
wavelet-elab/: Cargo.toml  notes.md
wavelet-elab/examples/: export_json.rs
wavelet-elab/src/: check.rs  env.rs  ir.rs  lib.rs  main.rs  parse.rs
wavelet-elab/src/ghost/: affine.rs  fracperms.rs  ir.rs  json.rs  lower.rs  mod.rs
wavelet-elab/src/ghost/checker/: context.rs  contract.rs  expr_checker.rs  mod.rs  perm_env.rs  permission.rs  pretty_print.rs  program_checker.rs  stmt_checker.rs  synthesis.rs  tail_checker.rs  tests.rs  trace.rs  utils.rs  validation.rs
wavelet-elab/src/ghost/fracperms/: expr.rs  mod.rs  normalize.rs  solver.rs
wavelet-elab/src/logic/: region.rs
wavelet-elab/src/logic/semantic/: mod.rs  solver.rs
wavelet-elab/tests/: cap_diff.rs  phi_region.rs  phi_solver.rs  solver_le.rs  typeck_tests.rs
wavelet-embedding/: Cargo.toml
wavelet-embedding/src/: lib.rs
wavelet/src/: compile.rs  exec.rs  handshake.rs  main.rs  plot.rs  utils.rs
(+341 files in other folders)
