[workspace]
resolver = "3"
members = [
    "wavelet-elab",
    "wavelet-embedding",
    "wavelet-core",
    "wavelet-eval",
    "wavelet",
]
default-members = ["wavelet"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Zhengyao Lin <zhengyal@cmu.edu>",
    "Yi Cai <yicai@umd.edu>",
]
license = "MIT"

[workspace.dependencies]
thiserror = "2.0.18"
clap = { version = "4.5.54", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
