[package]
name = "dfx"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1.13"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
smtlib = "0.3"
smtlib-lowlevel = "0.3"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]

[lib]
name = "dfx"
path = "src/lib.rs"
