[package]
name = "wavelet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
lean-sys = { git = "https://github.com/zhengyao-lin/lean-sys.git", default-features = false, features = ["no_link", "mimalloc"] }
libc = "0.2.180"
