[package]
name = "wavelet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
clap.workspace = true
wavelet-elab = { path = "../wavelet-elab" }
wavelet-core = { path = "../wavelet-core" }
anyhow = "1.0.100"
console = "0.16.2"
indicatif = "0.18.3"
